tests/spec/non_conformant/errors/interpolation/error_1.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/interpolation/error-1.hrx"

// Ignoring "test", error tests are not supported yet.
